Update some syntax in ForgeHooks to modern